--- a/css/basic/base.css
+++ b/css/basic/base.css
@@ -5,11 +5,13 @@
 
 body {
     background-color: #22252c;
+    margin: 0 auto;
 }
 
 main{
     border-radius: 10px;
     background-color: #383b42;
-    margin-top: 15px;
+    margin:10px 10px 10px 15px;
     padding: 20px 15px;
+    /* max-width: 1250px; */
 }
