--- a/css/components/main-header.css
+++ b/css/components/main-header.css
@@ -2,64 +2,34 @@
 .main-header {
     background-image: linear-gradient(-86deg, #33be6d 0%, #0c98b9 100%);
     color: #ffffff;
+    font-size: 1.3125rem;
     height: 4.375rem;
     border-radius: 2.15325rem;
     padding: 0 80px;
-}
-
-.main-header .main-nav {
-    text-align: left;
+    margin: 10px auto;
 }
 
 .main-header .main-nav li {
-    margin-left: 40px;
     cursor: pointer;
+    font-weight: 500;
+    line-height: 2.5rem;
+    padding: 0 20px;
+    margin: 0 10px;
 }
 
-/* .main-header .main-nav a {
-    color: inherit;
-    text-decoration: none;
-} */
+.main-header .main-nav li:hover {
+    box-shadow: 0 3px 6px 1px rgba(0, 0, 0, 0.15);
+    border-radius: 1.25rem;
+    background-color: #fefefe;
+    color: #21ac91;
+}
 
-/* .main-header .main-nav li:hover {
-    color: var(--clr1);
-    box-shadow: -1px 0 0 var(--clr3), inset 0 -6px 0 var(--clr1);
-} */
-
-/* .menu-toggle {
+.menu-toggle {
     position: absolute;
-    right: 20px;
-    color: #ffffff;
-    background-color: var(--clr2);
-    border-radius: 4px;
-    border-width: 1;
-    font-size: 1.3rem;
-    padding:2px 5px;
+    right: 30px;
+    background-color: #fefefe;
+    color: #21ac91;
+    padding:0.5rem 0.55rem ;
+    border-radius: 50%;
     display: none;
-} */
-
-/* DROPDOWN */
-/* .main-header .navbar-dropdown {
-    position: absolute;
-    top: 0;
-    opacity: 0;
-    pointer-events: none;
 }
-
-.main-header .navbar-dropdown a {
-    color: inherit;
-    text-decoration: none;
-}
-
-.main-nav .navbar-dropdown li {
-    min-height: 3rem;
-    background-color: var(--clr2);
-    color: #ffffff;
-}
-
-.dropdown-activate:hover .navbar-dropdown {
-    top: 130px;
-    opacity: 1;
-    transition: .3s;
-    pointer-events: auto;
-} */
