--- a/css/setup/typography.css
+++ b/css/setup/typography.css
@@ -5,7 +5,7 @@
 }
 
 /* Font Awsome */
-/* @font-face {
+@font-face {
     font-family: fa;
-    src: url("../../fonts/fa/fa-brands-400.ttf");
-} */
+    src: url("../../fonts/fa/fa-solid-900.ttf");
+}
