--- a/css/components/meme-editor.css
+++ b/css/components/meme-editor.css
@@ -42,12 +42,14 @@
 
 .line-change-btns .btn {
     margin: 0 2px;
+    padding: 0;
     border: none;
     border-radius: 10px;
     width: 3.125rem;
     height: 3.125rem;
     font-size: 2rem;
     cursor: pointer;
+    text-align: center;
 }
 
 .line-change-btns .btn:hover {
@@ -77,7 +79,7 @@
     border-radius: 15px;
     background-color: #19a59f;
     margin: 15px auto;
-    padding: 10px;
+    padding: 10px 0;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(50px, 50px));
     gap: 10px;
@@ -92,6 +94,9 @@
     height: 3.125rem;
     font-size: 2rem;
     cursor: pointer;
+    padding: 0;
+    margin: 0 7px;
+    text-align: center;
 }
 
 .modify-btns .btn:hover {
