--- a/css/basic/layout.css
+++ b/css/basic/layout.css
@@ -1,6 +1,9 @@
 /* layout */
 .main-layout {
-    max-width: 1250px;
-    margin-right: auto;
-    margin-left: auto;
+    max-width: 1120px;
+    margin: 0 auto;
+}
+
+.main-content{
+    padding: 10px;
 }
