--- a/css/components/main-header.css
+++ b/css/components/main-header.css
@@ -1,4 +1,4 @@
-/* header */
+/* HEADER */
 .main-header {
     background-image: linear-gradient(-86deg, #33be6d 0%, #0c98b9 100%);
     color: #ffffff;
@@ -6,7 +6,15 @@
     height: 4.375rem;
     border-radius: 2.15325rem;
     padding: 0 80px;
-    margin: 10px auto;
+    margin-bottom: 10px;
+}
+
+.main-logo {
+    background: url("/img/LOGO/LOGO.png");
+    background-position: center center;
+    background-size: cover;
+    width: 14.6875rem;
+    height: 3.125rem;
 }
 
 .main-header .main-nav li {
@@ -18,18 +26,17 @@
 }
 
 .main-header .main-nav li:hover {
+    background-color: var(--clr1);
+    color: var(--clr2);
     box-shadow: 0 3px 6px 1px rgba(0, 0, 0, 0.15);
     border-radius: 1.25rem;
-    background-color: #fefefe;
-    color: #21ac91;
 }
 
 .menu-toggle {
-    /* position: absolute;
-    right: 30px; */
-    background-color: #fefefe;
-    color: #21ac91;
-    padding:0.5rem 0.55rem ;
+    background-color: var(--clr1);
+    color: var(--clr2);
+    padding: 0.5rem 0.55rem;
     border-radius: 50%;
     display: none;
+    cursor: pointer;
 }
