--- a/css/components/meme-editor.css
+++ b/css/components/meme-editor.css
@@ -19,14 +19,14 @@
     box-shadow: 1px 5px 0 #bbc4d111, inset 0 5px 0 #ffffff11;
     border-radius: 30px;
     background-color: #ebeef311;
-    padding:15px;
+    padding:10px;
     max-width: 350px;
 }
 
 .editing-features .meme-text-input {
     box-shadow: 1px 5px 0 #bbc4d1, inset 0 5px 0 #ffffff;
     border-radius: 28px;
-    background-color: #ebeef3;
+    background-color: var(--bg-clr1);
     border: none;
     color: #3d3d3d;
     font-size: 1.5625rem;
@@ -59,19 +59,19 @@
 
 .line-change-btns .line-switch {
     background-image: linear-gradient(-38deg, #66c4dc 0%, #40b1ce 50%, #0c98bb 100%);
-    background-color: #ebeef3;
-    box-shadow: 1px 5px 0 #048b97, inset 0 5px 0 rgba(255, 255, 255, 0.58);
+    background-color: var(--bg-clr1);
+    box-shadow: 1px 2px 0 #048b97, inset 0 3px 0 rgba(255, 255, 255, 0.58);
 }
 
 .line-change-btns .line-add {
     background-image: linear-gradient(-38deg, #42eb5c 0%, #37b34a 100%);
-    background-color: #ebeef3;
-    box-shadow: 1px 5px 0 #015d33, inset 0 5px 0 rgba(255, 255, 255, 0.58);
+    background-color: var(--bg-clr1);
+    box-shadow: 1px 2px 0 #015d33, inset 0 3px 0 rgba(255, 255, 255, 0.58);
 }
 
 .line-change-btns .line-delete {
-    box-shadow: 1px 5px 0 #8c0606, inset 0 5px 0 rgba(255, 255, 255, 0.58);
-    background-color: #ebeef3;
+    box-shadow: 1px 2px 0 #8c0606, inset 0 3px 0 rgba(255, 255, 255, 0.58);
+    background-color: var(--bg-clr1);
     background-image: linear-gradient(-38deg, #cf1d37 0%, #cf1d37 1%, #f05036 100%);
 }
 
@@ -103,4 +103,20 @@
     box-shadow: 1px 6px 5px rgba(92, 92, 92, 0.55);
     background-color: #e4e1e1fa;
     transition: .1s;
+}
+
+.emojis-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(50px, 50px));
+    border-radius: 30px;
+    background-color: #ffffff;
+    font-size: 30px;
+    text-align: center;
+    margin: 15px auto;
+    padding: 20px;
+    gap: 10px;
+}
+
+.emoji:hover{
+    background-color: #555555;
 }
