--- a/css/mq/mq.css
+++ b/css/mq/mq.css
@@ -1,12 +1,58 @@
-/* MOBILE ONLY */
-@media (max-width: 640px) {
-    :root {
-        --gallery-img-width:250px;
-        --gallery-img-height:250px;
-    }
+/* MEDIUM */
+@media (max-width: 1140px) {
     .main-layout {
-        min-width: 600px;
-        margin: 10px;
+        width: 900px;
+    }
+}
+
+/* SMALL */
+@media (max-width: 935px) {
+    .main-layout {
+        width: 680px;
+    }
+
+    html {
+        font-size: 12px;
+    }
+
+    .editing-features {
+        padding: 10px 0 0 0;
+        background-color: #00000000;
+        box-shadow: 0 0 black;
+    }
+}
+
+/* MOBILE */
+@media (max-width: 715px) {
+    html {
+        font-size: 16px;
+    }
+
+    body {
+        margin: 0 auto;
+    }
+
+    :root {
+        --gallery-img-width: 220px;
+        --gallery-img-height: 220px;
+    }
+
+    .main-layout {
+        width: 515px;
+    }
+
+    .main-header {
+        border-radius: 0;
+        padding: 0 20px;
+        width: 535px;
+    }
+
+    .main-content {
+        background-color: #00000000;
+    }
+
+    .filters-container .search-keyword-container {
+        background-color: var(--main-content-clr);
     }
 
     .edit-container {
@@ -16,30 +62,33 @@
 
     .edit-container .edited-meme {
         margin-bottom: 20px;
+        background-color: #00000000;
     }
 
-    .main-header {
-        margin: 0;
-        border-radius: 0;
+    .editing-features {
+        box-shadow: 1px 5px 0 #bbc4d111, inset 0 5px 0 #ffffff11;
+        background-color: #ebeef311;
+        padding: 10px;
     }
 
+    /* TOGGLE MENU FEATURE */
     .menu-toggle {
         display: block;
-        cursor: pointer;
     }
+
     .menu-toggle:hover {
         box-shadow: 0px 0px 5px 5px rgb(0 0 0 / 19%);
     }
 
     .main-header .main-nav {
         background-image: linear-gradient(-86deg, #33be6d 0%, #0c98b9 100%);
-        position: fixed; 
+        position: fixed;
         flex-direction: column;
-       align-items: center; 
+        align-items: center;
         right: 0;
         top: 0;
         width: 50%;
-        height: 100vh;
+        height: 100%;
         padding: 70px 0;
         transform: translateX(100%);
         transition: transform .6s;
@@ -56,10 +105,3 @@
         transform: translateX(0);
     }
 }
-
-
-/* MEDIUM */
-@media (min-width: 840px) {}
-
-/* LARGE */
-@media (min-width: 1100px) {}
