--- a/css/components/gallery.css
+++ b/css/components/gallery.css
@@ -10,37 +10,37 @@
 .gallery-container .img-container {
     /* if im changing the img to absolute
      so the DOM will stay the same */
-     /* position: relative; */
+    /* position: relative; */
     width: var(--gallery-img-width);
-    height: var(--gallery-img-height);
+    /* height: var(--gallery-img-height); */
 }
 
 .gallery-img {
     width: var(--gallery-img-width);
-    height: var(--gallery-img-height);
+    /* height: var(--gallery-img-height); */
     border-radius: 10px;
     box-shadow: 0px 3px 10px 0px black;
     cursor: pointer;
 }
 
 .gallery-img:hover {
-    position: absolute;
+    /* position: absolute; */
     width: var(--gallery-img-width);
-    height: var(--gallery-img-height);
+    /* height: var(--gallery-img-height); */
     box-shadow: 0px 3px 20px 0px black;
     transition: .3s;
-    transform: translateY( -5px);
+    transform: translateY(-5px);
 }
 
-.im-flexible-btn{
+.im-flexible-btn {
     background-color: var(--clr2);
     border: none;
     border-radius: 20px;
     display: block;
-margin: 0 auto 10px;
-padding: 5px 15px;
+    margin: 0 auto 10px;
+    padding: 5px 15px;
 }
 
-.im-flexible-btn:hover{
+.im-flexible-btn:hover {
     background-color: var(--clr1);
 }
