--- a/css/setup/typography.css
+++ b/css/setup/typography.css
@@ -1,5 +1,5 @@
 @font-face {
-    /* eurofurence */
+    /* poppins */
     font-family: poppins;
     src: url(../../fonts/Poppins/Poppins-Regular.ttf);
 }
